--- a/index.html
+++ b/index.html
@@ -73,6 +73,18 @@
                 <p><img src="img/css.png" alt="CSS Logo" width="61"></p>
             </div>
         </section>
+        <section title="CONTACT ME">
+            <h3><center>CONTACT ME </center></h3>
+            <form action="">
+                <label for="NAME">NAME</label>
+                <input type="text">
+                <br>
+                <label for="EMAIL">EMAIL</label>
+                <input type="email" name="EMAIL" id="">
+                <label for="MESAGE">MESAGE</label>
+                <textarea name="" id="" cols="30" rows="10"></textarea>
+            </form>
+        </section>
     </div>
 
     <footer>
