se agregaro certificado

--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
                 <img src="img/provedores_tech.PNG" alt="Suppliers Table"><p><center>*This is an example*</center></p>
             </div>
         </section>
+        <section title="Certifications">
+            <h3><center>Certifications</center></h3>
+            <p><img src="img/DiplomaCosntruccionBD-1.png" alt="CERTIFICACION BD"  width="600" ><center><center>CONSTRUCTION OF DATABASES WITH MY SQL</center></center></p>
+            <p><img src="img/" alt="" width="600"><center></center></p>
+
+        </section>
 
         <section title="Skills" id="skills-section">
             <h3><center>Skills</center></h3>
